--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -51,6 +51,8 @@ There is a bare minimum that one should strive for when sharing threat intellige
 
 == Advanced Sharing ==
 
+As you mature in your threat intelligence sharing capabilities, you may find that your partners need more than the bare minimum as described above. Below are some common parameters found mature threat intelligence feeds. 
+
 ==== Common Parameters ====
 || Parameter Name || Values || Description ||
 || alternativeid || <string> || usually a url pointing to the original data point (as a reference id) ||
