--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -68,3 +68,4 @@ As you mature in your threat intelligence sharing capabilities, you may find tha
 As mentioned above, one of CIF's goals is to make it easier to share threat intelligence. If you deploy a CIF instance and feed your threat intelligence to CIF, what capabilities does CIF give you in regards to sharing threat intelligence?
 
  * Create users with [Utilities_v1#cif_apikeys API keys]
+ * [ServerInstall_v1#Enabling_Feed_Generation Generate] [Feeds_v1 feeds] of threat intelligence
