Edited wiki page Sharing_Threat_Intelligence_v1 through web user interface.

--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -69,3 +69,4 @@ As mentioned above, one of CIF's goals is to make it easier to share threat inte
 
  * Create users with [Utilities_v1#cif_apikeys API keys]
  * [ServerInstall_v1#Enabling_Feed_Generation Generate] [Feeds_v1 feeds] of threat intelligence
+ * Support many [Feeds_v1#Output_Plugins output types], not only CSV
