--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -72,3 +72,4 @@ As mentioned above, one of CIF's goals is to make it easier to share threat inte
  * [ServerInstall_v1#Enabling_Feed_Generation Generate] [Feeds_v1 feeds] of threat intelligence
  * Support many [Feeds_v1#Output_Plugins output types], not only CSV
  * Give your partners an [API_v1 API] to program against
+ * [Whitelist_v1 Whitelisting] capabilities
