--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -7,13 +7,15 @@ At some point you may want to share your threat intelligence with others. This m
 
 == Baseline ==
 
-=== Method of sharing ===
+=== Method of Sharing ===
 
 The most common way to share threat intelligence in 2013 is to place the intelligence in a CSV file and make it available via http or https with basic auth. A harder way to share threat intelligence in 2013 is to use SMTP and possibly GPG, which requires your partners to parse SMTP messages and possibly unencrypt if encrypted.
 
 One of the goals of the CIF project is to make it easier to share threat intelligence, once familiar with CIF (which is no small feat), CIF can give you a lot of advanced capabilities essentially for free.
 
-=== Principle of most specific ===
+=== Be Specific ===
+
+
 
 == Minimum Sharing ==
 
