Edited wiki page Sharing_Threat_Intelligence_v1 through web user interface.

--- a/wiki/Sharing_Threat_Intelligence_v1.wiki
+++ b/wiki/Sharing_Threat_Intelligence_v1.wiki
@@ -16,6 +16,14 @@ One of the goals of the CIF project is to make it easier to share threat intelli
 
 ==== Most Specific Indicator ====
 
+Whenever possible share the most specific indicator you have. If you have:
+
+ * URL - share the malicious URL
+ * IP address - share the ip address, port and protocol
+ * FQDN - share the FQDN
+
+All too often someone will start with a malicious URL then resolve the A record or strip out the domain and share those two indicators as malicious. Due to shared hosting, compromised servers or compromised web applications, often only a very specific indicator is a highly confident indicator of potential compromise. 
+
 == Minimum Sharing ==
 ----
 
