Edited wiki page ServerInstall_DebianWheezy_v1 through web user interface.

--- a/wiki/ServerInstall_DebianWheezy_v1.wiki
+++ b/wiki/ServerInstall_DebianWheezy_v1.wiki
@@ -2,7 +2,7 @@
 
 <font color="red">
 
-* THIS DOC HAS NOT BEEN FULLY TESTED, DO NOT USE *
+* THIS DOC HAS NOT BEEN FULLY TESTED, USE AT YOUR OWN RISK, YOU MAY OR MAY NOT GET SUPPORT *
 
 </font>
 
