--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -68,8 +68,9 @@ Consult the Disk Layout Guide before setting up your operating system. There are
 Choose the distribution you used as your base operating system and install the required applications and dependencies.
 
  * (testing) [ServerInstall_DebianSqueeze_v1 Debian Squeeze (6)]
- * (testing) [ServerInstall_DebianWheezy_v1 Debian Wheezy (7)] 
- * (testing) [ServerInstall_Ubuntu12_v1 Ubuntu 12 ] 
+ * (unstable) [ServerInstall_DebianWheezy_v1 Debian Wheezy (7)] 
+ * (testing) [ServerInstall_Ubuntu12_v1 Ubuntu 12] 
+ * (unstable) [ServerInstall_Ubuntu13_v1 Ubuntu 13] 
  * (testing) [ServerInstall_CentOS6_v1 CentOS 6] 
  * (testing) [ServerInstall_CentOS5_v1 CentOS 5]
 
