Edited wiki page ServerInstall_CentOS6_v1 through web user interface.

--- a/wiki/ServerInstall_CentOS6_v1.wiki
+++ b/wiki/ServerInstall_CentOS6_v1.wiki
@@ -25,6 +25,7 @@ Selinux either needs to be disabled or a [http://wiki.centos.org/HowTos/SELinux 
 SELINUX=permissive
 }}}
  # restart the server for the kernel changes to take effect
+ # some helpful discussion references can be found [https://groups.google.com/forum/#!tags/ci-framework/selinux here]
 === EPEL Repo ===
 The following dependency installation assumes the RHEL [http://fedoraproject.org/wiki/EPEL EPEL] repo is not enabled. If you would like to enable it and leverage that there are 3rd party [http://www.thegeekstuff.com/2012/06/enable-epel-repository instructions] for doing so. Most (if not all) the 'wget' deps should install via the repo using 'yum', but we have done no testing to verify this. Feedback welcome.
 
