Edited wiki page ThreatIntelligenceTools through web user interface.

--- a/wiki/ThreatIntelligenceTools.wiki
+++ b/wiki/ThreatIntelligenceTools.wiki
@@ -1,13 +1,7 @@
-#summary One-sentence summary of this page.
+#summary a list of threat intelligence tools
 
 = Introduction =
 
-Add your content here.
+A page to highlight and record tools in the threat intelligence space
 
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+* [https://csirt.cesnet.cz/Warden/Intro WARDEN] - a system for efficient sharing information about detected events (threats).
