--- a/wiki/ThreatIntelligenceTools.wiki
+++ b/wiki/ThreatIntelligenceTools.wiki
@@ -4,5 +4,6 @@
 
 A page to highlight and record tools in the threat intelligence space
 
+ * [http://collectiveintel.org CIF] - Collective Intelligence Framework
  * [https://github.com/MISP/MISP MISP] - Malware Information Sharing Platform
  * [https://csirt.cesnet.cz/Warden/Intro WARDEN] - a system for efficient sharing information about detected events (threats).
