Edited wiki page ThreatIntelligenceTools through web user interface.

--- a/wiki/ThreatIntelligenceTools.wiki
+++ b/wiki/ThreatIntelligenceTools.wiki
@@ -4,6 +4,7 @@
 
 A page to highlight and record tools in the threat intelligence space
 
+ * [http://abusehelper.be/ AbuseHelper- - Automatically process your incident notifications
  * [http://collectiveintel.org CIF] - Collective Intelligence Framework
  * [https://github.com/MISP/MISP MISP] - Malware Information Sharing Platform
  * [https://csirt.cesnet.cz/Warden/Intro WARDEN] - a system for efficient sharing information about detected events (threats).
